--- a/views/movies/movieAll.hbs
+++ b/views/movies/movieAll.hbs
@@ -1,16 +1,15 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
-    <!-- JUMBOTRON -->
+    {{!-- <!-- JUMBOTRON -->
     <div class="jumbotron text-center">
       <div class="container">
-        <h1>Welcome To Movies Is My LIfe App</h1>
+        <h1>Welcome To My Website</h1>
 
         <!-- results of movies -->
         <div class="container">
          <div id="results" class="row"></div>
-        </div>
+        </div> --}}
 
 
-
-
+      
