added a bonch more to the project

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,12 +5,16 @@ body {
   color: #9c0d31;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
-/*============== <layout navBar> ============================================*/
 body {
   background: url("/images/toothless.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 50px; }
+
+/*============== <layout navBar> ============================================*/
+.profile-img {
+  max-width: 70px;
+  border-radius: 10px; }
 
 .dropdown-menu {
   background-color: #c0a9a9; }
