--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -72,7 +72,7 @@
             <li class="float-right"><a href="/logout">Logout</a> </li>
             <li><br>
               <form action="/profile/{{user._id}}" method="POST">
-              <button class="float-right">{{user.username}}</button>
+              <button class="btn-dark float-right">{{user.username}}</button>
               </form>
             </li>
              <img class="float-right profile-img" src="{{user.image}}" alt="">
