--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,19 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
 
+<p>{{user}}</p>
+<script>
+
+      function addMovie(movieData) {
+    
+        console.log("-=-=-=-========================",movieData);
+
+      }
+      let x ="hello";
+
+
+</script>
+
     <!-- JUMBOTRON -->
     <div class="jumbotron text-center">
       <div class="container">
