--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -60,6 +60,8 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Options
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
+              <li><a href="/cinema/myCinema">My Cinema</a></li>
+              <li role="separator" class="divider"></li>
               <li><a href="#">My Favorites</a></li>
               <li role="separator" class="divider"></li>
               <li><a href="#">Must Watch</a></li>
