--- a/views/auth/profile.hbs
+++ b/views/auth/profile.hbs
@@ -33,10 +33,14 @@
       <input class="form-control" type="text" name="email" value="{{user.email}}">
       <br>
   
-      <label for="email">image src</label><br>
-      <input class="form-control" type="text" name="image" value="{{user.image}}">
+      <label for="password">Password</label><br>
+      <input class="form-control" type="password" name="password" placeholder="DeathStar">
       <br>
 
+      <label for="imageSrc">image src</label><br>
+      <input class="form-control" type="text" name="image" value="{{user.image}}">
+      <br>
+      
       {{#if errorMessage}}
       <div class="error-message">{{ errorMessage }}</div>
       {{/if}}
