--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,7 @@
 /*============== <Global> ==============*/
 body {
   padding: 50px;
-  color: #9c0d31;
+  color: #fdeeee;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif; }
 
 body {
@@ -75,7 +75,7 @@ body {
 /*============== <home> ============================================*/
 /*============== <header> ==============*/
 .jumbotron {
-  background-image: url("/images/hexagon-wallpapers.jpg");
+  background: #212420;
   background-size: cover;
   padding-bottom: 390px;
   border-radius: 10px; }
