--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -50,7 +50,7 @@
       </ul>
       <form  class="navbar-form navbar-left" action="/search" method="POST">
         <div  class="form-group">
-          <input id="searchText" type="text" class="form-control" name="searchText" placeholder="Search Movie">
+          <input id="searchText" type="text" class="form-control" name="searchText" placeholder="Search Movie" >
         </div>
         <!-- onClick="location.href='/'" -->
         <button id="searchForm" type="submit"  class="btn btn-dark">Submit</button>
@@ -63,11 +63,11 @@
             <ul class="dropdown-menu">
               <li><a href="/cinema/myCinema">My Cinema</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">My Favorites</a></li>
+              <li><a href="/movies/favorites">My Favorites</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Must Watch</a></li>
+              <li><a href="/movies/mustWatch">Must Watch</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#">Easy Sunday</a></li>
+              <li><a href="/movies/easySunday">Easy Sunday</a></li>
             </ul>
           </li>
         
